--- a/backend/listaCompras/src/main/resources/application.properties
+++ b/backend/listaCompras/src/main/resources/application.properties
@@ -1,7 +1,17 @@
 spring.application.name=listaCompras
-spring.datasource.url = jdbc:h2:mem:listaCompras
-spring.datasource.driverClassName = org.h2.Driver
-spring.datasource.username=admin
+# spring.datasource.url = jdbc:h2:mem:listaCompras
+# spring.datasource.driverClassName = org.h2.Driver
+# spring.datasource.username=admin
+# spring.datasource.password=admin
+# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# spring.h2.console.enabled=true
+
+spring.datasource.url= jdbc:postgresql://localhost:5432/listaCompras
+spring.datasource.username=postgres
 spring.datasource.password=admin
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Configurações adicionais, como inicialização automática do esquema
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
