--- a/backend/listaCompras/src/main/resources/application.properties
+++ b/backend/listaCompras/src/main/resources/application.properties
@@ -14,4 +14,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # Configurações adicionais, como inicialização automática do esquema
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.main.allow-bean-definition-overriding=true
+
