--- a/backend/listaCompras/src/main/resources/application.properties
+++ b/backend/listaCompras/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.application.name=listaCompras
 # spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # spring.h2.console.enabled=true
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/listaCompras
+spring.datasource.url= jdbc:postgresql://localhost:5432/lista_compras
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
