--- a/backend/listaCompras/src/main/resources/application.properties
+++ b/backend/listaCompras/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configurações adicionais, como inicialização automática do esquema
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.show-sql=false
 spring.main.allow-bean-definition-overriding=true
 
